--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
     <section id="container">
       <header>
         <h1 class="text-center">Knot</h1>
+        <span id="notifs">3</span>
+        <div id="notifCenter">
+          <ul class="notifications">
+            <li class="notificationSing">
+              <h4>Mike has just logged in "Read for Fun". </h4>
+            </li>
+            <li class="notificationSing">
+              <h4>Wending has invited you to "Swim". </h4>
+            </li>
+            <li class="notificationSing">
+              <h4>John has just sent an encouragement for "Morning Run". </h4>
+            </li>
+          </ul>
+        </div>
       </header>
       <section id="contentPane">
         <section class="hoverButton" id="addKnotPane">
