--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/addKnot.js"></script>
+    <script type="text/javascript" src="js/jquery.pulse.min.js"></script>
   </body>
 </html>
