trying to get that damn gray block in

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section id="contentPane">
         <section class="hoverButton grey lighten-2" id="addKnotPane">
           <section class='row' id='addForm'>
-            <h2>Add New Knot</h2><a id='hideAddPane' href='#'>hide</a>
+            <h2>Add New Knot</h2><a id='hideAddPane' class="waves-effect waves-light btn" href='#'>hide</a>
             <form class='col s12'>
               <div class='row'> 
                 <div class='input-field col s6'> 
