--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="container">
       <header>
         <h1 id="logo" class="text-center">Knot</h1>
-        <span id="notifs">3</span>
+        <!-- <span id="notifs">3</span>
         <div id="notifCenter">
           <ul class="notifications">
             <li class="notificationSing">
@@ -36,34 +36,43 @@
               <h4>John has just sent an encouragement for "Morning Run". </h4>
             </li>
           </ul>
-        </div>
+        </div> -->
       </header>
+      <!-- Modal Structure -->
+      
       <section id="contentPane">
-        <section class="hoverButton grey lighten-2" id="addKnotPane">
-          <section class='row' id='addForm'>
-            <h2>Add New Knot</h2><a id='hideAddPane' class="waves-effect waves-light btn" href='#'>hide</a>
-            <form class='col s12'>
-              <div class='row'> 
-                <div class='input-field col s6'> 
-                  <input id='partnerIn' type='text'></input><label for='partnerIn'>Partner</label>
+        <div id="modal1" class="modal modal-fixed-footer">
+          <div class="modal-content">
+            <section class="hoverButton" id="addKnotPane">
+            <section class='row' id='addForm'>
+              <h2>Add New Knot</h2><!-- <a id='hideAddPane' class="waves-effect waves-light btn" href='#'>hide</a> -->
+              <form class='col s12'>
+                <div class='row'> 
+                  <div class='input-field col s6'> 
+                    <input id='partnerIn' type='text'></input><label for='partnerIn'>Partner</label>
+                  </div>
+                  <div class='input-field col s6'> 
+                    <input id='titleIn' type='text'></input><label for='titleIn'>Activity</label>
+                  </div>
+                </div> 
+                <div class='input-field col s12'>
+                  <input id='goalIn' type='text'></input><label for='goalIn'>Target Quantity</label> 
                 </div>
-                <div class='input-field col s6'> 
-                  <input id='titleIn' type='text'></input><label for='titleIn'>Activity</label>
-                </div>
-              </div> 
-              <div class='input-field col s12'>
-                <input id='goalIn' type='text'></input><label for='goalIn'>Target Quantity</label> 
-              </div>
-              <div class='input-field col s12'>
-                <input id='enddateIn' type='date' class='datepicker'></input><label for='enddateIn'>End Date</label>
-              </div> 
-              <a id="addBtn" class="waves-effect waves-light btn">Add</a>
-            </form>
-          </section>
+                <div class='input-field col s12'>
+                  <input id='enddateIn' type='date' class='datepicker'></input><label for='enddateIn'>End Date</label>
+                </div> 
+                
+              </form>
+            </section>
+          </div>
+          <div class="modal-footer">
+            <a id="addBtn" class="waves-effect waves-light btn">Add</a>
+          </div>
+        </div>
           <a href="">
-            <button class="addKnot">
+            <!-- <button class="addKnot">
               <i class="fa fa-plus-circle"></i> Add Knot
-            </button>
+            </button> -->
 
           </a>
         </section>
