--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="container">
       <header>
         <h1 id="logo" class="text-center">Knot</h1>
-        <span id="notifs">3</span>
+        <!-- <span id="notifs">3</span> -->
         <div id="notifCenter">
           <ul class="notifications">
             <li class="notificationSing">
