--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h4>John has just sent an encouragement for "Morning Run". </h4>
             </li>
           </ul>
-        </div> -->
+        </div>
       </header>
       <!-- Modal Structure -->
       
