timer not working

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="modal-content">
             <section class="hoverButton" id="addKnotPane">
             <section class='row' id='addForm'>
-              <h2>Add New Knot</h2><!-- <a id='hideAddPane' class="waves-effect waves-light btn" href='#'>hide</a> -->
+              <h3 id="addHeaderText">ADD NEW KNOT</h3><!-- <a id='hideAddPane' class="waves-effect waves-light btn" href='#'>hide</a> -->
               <form class='col s12'>
                 <div class='row'> 
                   <div class='input-field col s6'> 
@@ -91,7 +91,9 @@
     <!-- Bootstrap JavaScript -->
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/addKnot.js"></script>
+    <script type="text/javascript" src="js/jquery.transit.min.js"></script>
     <script type="text/javascript" src="js/jquery.pulse.min.js"></script>
+    <script type="text/javascript" src="js/addKnot.js"></script>
+
   </body>
 </html>
