changed colors to make them less striking

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <div class='input-field col s12'>
                   <input id='goalIn' type='text'></input><label for='goalIn'>Target Quantity</label> 
                 </div>
-                <div class='input-field col s12'>
+                <!-- <div class='input-field col s12'>
                   <input id='enddateIn' type='date' class='datepicker'></input><label for='enddateIn'>End Date</label>
-                </div> 
+                </div>  -->
                 
               </form>
             </section>
