--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
     <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/hci.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -41,6 +42,16 @@
       <!-- Modal Structure -->
       
       <section id="contentPane">
+        <div id="modal2" class="modal">
+          <div class="modal-content">
+            <h4>Send a Motivation Message!</h4>
+            <textarea>A bunch of text</textarea>
+          </div>
+          <a href="#" class="senderBtn modal-action modal-close">SEND</a>
+          <!-- <div class="modal-footer">
+            <a href="#" class="waves-effect waves-green btn-flat modal-action modal-close">Send</a>
+          </div> -->
+        </div>
         <div id="modal1" class="modal modal-fixed-footer">
           <div class="modal-content">
             <section class="hoverButton" id="addKnotPane">
