--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <![endif]-->
   </head>
   <body>
+    <a href="#" id="reset"></a> 
     <section id="container">
       <header>
         <h1 id="logo" class="text-center">Knot</h1>
